[package]
name = "adh"
version = "1.1.5"
authors = ["Joaquin Caro <jcaromiq@gmail.com>"]
edition = "2018"

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift" }
tokio = { version = "1.11.0", features = ["macros"] }
async-trait = "0.1.51"
prettytable-rs = "0.8.0"
clap = "2.33.3"
futures = "0.3.17"
rand="0.8.4"
openssl = { version = "0.10.36", features = ["vendored"] }
tui = "0.16.0"
termion = "1.5.6"

[dev-dependencies]
mockiato = "0.9.5"
predicates = "2.0.3"
pretty_assertions = "0.7.2"
assert_cmd = "2.0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
