[package]
name = "adh"
version = "1.2.1"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
edition = "2018"

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift" }
tokio = { version = "1.16.1", features = ["macros"] }
async-trait = "0.1.52"
prettytable-rs = "0.8.0"
clap = "2.34.0"
futures = "0.3.19"
rand="0.8.5"
openssl = { version = "0.10.38", features = ["vendored"] }
tui = "0.17.0"
termion = "1.5.6"

[dev-dependencies]
mockiato = "0.9.5"
pretty_assertions = "1.2.0"
predicates = "2.1.1"
assert_cmd = "2.0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
