[package]
name = "adh"
version = "1.2.1"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
edition = "2018"

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift" }
tokio = { version = "1.18.2", features = ["macros"] }
async-trait = "0.1.53"
prettytable-rs = "0.8.0"
clap = "3.1.18"
futures = "0.3.21"
rand="0.8.5"
openssl = { version = "0.10.34", features = ["vendored"] }
tui = "0.18.0"
termion = "1.5.6"

[dev-dependencies]
mockiato = "0.9.5"
pretty_assertions = "1.2.0"
predicates = "2.1.1"
assert_cmd = "2.0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
